--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@
                         <a href="https://www.instagram.com/ayangphi_muilng/"><i class="fab fa-instagram" aria-hidden="true"></i></a>
                         <!-- <a href="#0"><i class="fab fa-dribbble" aria-hidden="true"></i></a> --> 
                          <a href="#"><i class="fab fa-behance" aria-hidden="true"></i></a>
-                        <a href="https://www.linkedin.com/in/yuryangla-muilung-98b561160/"><i class="fab fa-linkedin" aria-hidden="true"></i></a>lass="fab fa-linkedin-in" aria-hidden="true"></i></a></li>
+                        <a href="https://www.linkedin.com/in/yuryangla-muilung-98b561160/"><i class="fab fa-linkedin" aria-hidden="true"></i></a>
                 </ul>
             </div>
 
