--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
                     <h1>I'm Yuryangla Muilung.</h1>
 
                     <h3>
-                    I'm a Mumbai based <span>Fashion Designer</span>, <span>illustrator</span> 
-                   with and Experience of handling all aspects of <span>design</span>  and <span> product development</span>. Let's <a class="smoothscroll" href="#about">start scrolling</a>
+                    I'm a Mumbai based <span>Fashion Designer</span> and <span>illustrator</span> 
+                   with an Experience of handling all aspects of <span>design</span>  and <span> product development</span>. Let's <a class="smoothscroll" href="#about">start scrolling</a>
                    and learn more <a class="smoothscroll" href="#about">about me</a>.
                     </h3>
 
@@ -613,7 +613,6 @@
              </a>
         </div> <!-- end ss-go-top -->
     </footer>
-
 
     <!-- Java Script
     ================================================== -->
