--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
   </li>
   <li>
     <a href="project/bridalhair.html" class="card">
-      <img src="images/BridalHairAcces/DSC_6176.JPG" class="card__image" alt="image" />
+      <img src="images/BridalHairAcces/1.jpg" class="card__image" alt="image" />
       <div class="card__overlay">
         <div class="card__header">
           <svg class="card__arc" xmlns="http://www.w3.org/2000/svg"><path /></svg>                     
@@ -521,7 +521,7 @@
   </li>
   <li>
     <a href="project/girlswear.html" class="card">
-      <img src="images/Fall2020Mens/_FIO0202.jpg" class="card__image" alt="image" />
+      <img src="images/Girls/chuilan bday.jpg" class="card__image" alt="image" />
       <div class="card__overlay">
         <div class="card__header">
           <svg class="card__arc" xmlns="http://www.w3.org/2000/svg"><path /></svg>                 
@@ -539,71 +539,6 @@
   </li>    
 </ul>
 
-
-
-
-        <div class="row collapse block-large-1-4 block-medium-1-3 block-tab-1-2 block-500-stack folio-list">
-
-            <div class="column folio-item" class="folio-item__thumb">
-                <a href="project/valentino.html" >
-                    <img src="images/valentino/00009-Valentino-Pre-Fall-2020.jpg" 
-                         srcset="images/valentino/00009-Valentino-Pre-Fall-2020.jpg 2x, 
-                               images/portfolio/valentino/00009-Valentino-Pre-Fall-2020.jpg 2x" alt="Image">
-                </a>
-            </div> <!-- end folio-item -->
-
-            <div class="column folio-item">
-                
-                <a href="project/fall2020mens.html" class="folio-item__thumb">
-                    <img src="images/Fall2020Mens/_FIO0328.jpg" 
-                         srcset="images/Fall2020Mens/_FIO0328.jpg 1x, 
-                                 images/Fall2020Mens/_FIO0328.jpg 2x" alt="">
-                </a>                
-             
-            </div> <!-- end folio-item -->
-
-            <div class="column folio-item">
-                <a href="project/spring2020mens.html" class="folio-item__thumb">
-                    <img src="images/Spring 2020 Men_s Wear/_FIO0436.jpg" 
-                         srcset="images/Spring 2020 Men_s Wear/_FIO0436.jpg x1, 
-                                 images/Spring 2020 Men_s Wear/_FIO0436.jpg 2x" alt="">
-                </a>
-            </div> <!-- end folio-item -->
-
-            <div class="column folio-item">
-                <a href="project/spring2020ready.html" class="folio-item__thumb">
-                    <img src="images/Spring2020ReadytoWear/_FIO1956.jpg" 
-                         srcset="images/Spring2020ReadytoWear/_FIO1956.jpg 1x, 
-                                 images/Spring2020ReadytoWear/_FIO1956.jpg 2x" alt="">
-                </a>
-            </div> <!-- end folio-item -->
-
-            <div class="column folio-item">
-                <a href="project/valention2020Ready.html" class="folio-item__thumb">
-                    <img src="images/valentinoFall2020Readytowear/IS5_0468.jpg" 
-                         srcset="images/valentinoFall2020Readytowear/IS5_0468.jpg 1x, 
-                                 images/valentinoFall2020Readytowear/IS5_0468.jpg 2x" alt="">
-                </a>
-            </div> <!-- end folio-item -->
-
-            <div class="column folio-item">
-                <a href="project/fall2019couture.html" class="folio-item__thumb">
-                    <img src="images/Fall 2019 Couture/fall 2019 couture.jpg" 
-                         srcset="images/Fall 2019 Couture/fall 2019 couture.jpg 1x, 
-                                 images/Fall 2019 Couture/fall 2019 couture.jpg 2x" alt="">
-                </a>
-            </div> <!-- end folio-item -->
-
-            <div class="column folio-item">
-                <a href="project/weddingproject.html" class="folio-item__thumb">
-                    <img src="images/BridesWhitegown/WhatsApp Image 2021-01-09 at 8.17.08 PM.jpeg" 
-                         srcset="images/BridesWhitegown/WhatsApp Image 2021-01-09 at 8.17.08 PM.jpeg 1x, 
-                                 images/BridesWhitegown/WhatsApp Image 2021-01-09 at 8.17.08 PM.jpeg 2x" alt="">
-                </a>
-            </div> <!-- end folio-item -->
-
-
-        </div> <!-- end folio-list -->
 
     <!-- contact
      -->
