--- a/project/bridalhair.html
+++ b/project/bridalhair.html
@@ -26,7 +26,7 @@
         </a>
     </header> <!-- end s-header -->
 
-<div style="width: 80%; height:auto; margin:auto; text-align: center;">
+<div style="width: 60%; height:auto; margin:auto; text-align: center;">
     <h2>Bridal Hair Accesory </h2>
     <h4>Description</h4>
       <p>
@@ -42,23 +42,23 @@
      <div class="project-block">
 
         <div class="image-block">
-             <img src="../images/BridalHairAcces/DSC_6176.JPG" alt="imge"/>
-             <img src="../images/BridalHairAcces/DSC_6226.JPG" alt="image"/>
-            <img src="../images/BridalHairAcces/DSC_6251 (1).JPG"alt="Image"">
+             <img src="../images/BridalHairAcces/1.jpg" alt="imge"/>
+             <img src="../images/BridalHairAcces/2.jpg" alt="image"/>
+            <img src="../images/BridalHairAcces/3.jpg"alt="Image"">
                
         </div>
 
         <div class="image-block">
-            <img src="../images/BridalHairAcces/DSC_6263.jpg"alt="Image"">
-            <img src="../images/BridalHairAcces/DSC_6317.JPG"alt="Image"">
-            <img src="../images/BridalHairAcces/PSFix_2018-05-06-23-35-00.jpg"alt="Image"">
+            <img src="../images/BridalHairAcces/4.jpg"alt="Image"">
+            <img src="../images/BridalHairAcces/5.jpg"alt="Image"">
+            <img src="../images/BridalHairAcces/06.jpg"alt="Image"">
         </div>
 
         <div class="image-block">
-            <img src="../images/BridalHairAcces/DSC_6321.JPG"alt="Image"">
-            <img src="../images/BridalHairAcces/DSC_6361 (1).JPG"alt="Image"">
-            <img src="../images/BridalHairAcces/DSC_6377 (1).JPG"alt="Image"">
-             <img src="../images/BridalHairAcces/DSC_6251.JPG"alt="Image/"">
+            <img src="../images/BridalHairAcces/6.jpg"alt="Image"">
+            <img src="../images/BridalHairAcces/7.jpg"alt="Image"">
+            <img src="../images/BridalHairAcces/8.jpg"alt="Image"">
+             <img src="../images/BridalHairAcces/9.jpg"alt="Image/"">
         </div>
         <br>         
     </div>
