--- a/project/fall2020mens.html
+++ b/project/fall2020mens.html
@@ -11,10 +11,10 @@
 
     <header class="p-title">
         <h3>
-            Fall 2020 Mens Project
+            Fall 2020 Mens Wear
         </h3>
         <div class="description">
-            <img src="../images/Fall2020Mens/_FIO0202.jpg"/>
+            <img src="../images/Fall2020Mens/1.jpg" alt="image"/>
         <p>  
             About valention project description
         </p>
@@ -26,9 +26,10 @@
     <div class="project-block">
 
         <div class="image-block">
-            <img src="../images/Fall2020Mens/_FIO0328.jpg" alt="imge"/>
-                <img src="../images/Fall2020Mens/_FIO0372.jpg" alt="image"/>
-                <img src="../images/Fall2020Mens/_FIO1134.jpg"alt="Image/"">
+            <img src="../images/Fall2020Mens/1.jpg" alt="imge"/>
+                <img src="../images/Fall2020Mens/2.jpg" alt="image"/>
+                <img src="../images/Fall2020Mens/3.jpg"alt="Image"">
+                <img src="../images/Fall2020Mens/4.jpg" alt="image">
         </div>
         <br>
          
