--- a/project/girlswear.html
+++ b/project/girlswear.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Velentino Project</title>
+    <title>Girls Party Wear</title>
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../css/vendor.css">
@@ -28,7 +28,7 @@
     </header> <!-- end s-header -->
 
 <div style="width: 100%; height: auto; margin:auto; text-align: center;"> 
-    <h2>Girl wear (Kids) </h2>
+    <h2>Girls Party wear (Kids) </h2>
 </div>
      <div class="project-block">
 
