--- a/project/spring2020mens.html
+++ b/project/spring2020mens.html
@@ -13,7 +13,7 @@
             Spring 2020 Mens Wear Project
         </h3>
         <div class="description">
-            <img src="../images/Spring 2020 Men_s Wear/_FIO0436.jpg"/>
+            <img src="../images/Spring 2020 Men_s Wear/1.jpg"/>
         <p>  
             Sping 2022 Mens wear was made out of cotton and anchor thread
         </p>
