--- a/project/velentino.html
+++ b/project/velentino.html
@@ -36,7 +36,7 @@
 <ul class="cards">
   <li>
     <a href="../project/fall2020mens.html" class="card">
-      <img src="../images/Fall2020Mens/_FIO1134.jpg" class="card__image" alt="image" />
+      <img src="../images/Fall2020Mens/1.jpg" class="card__image" alt="image" />
       <div class="card__overlay">
         <div class="card__header">
           <svg class="card__arc" xmlns="http://www.w3.org/2000/svg"><path /></svg>                     
