update for TechSheet

--- a/project/fall2020r.html
+++ b/project/fall2020r.html
@@ -41,12 +41,10 @@
         peacoat, mid length cashmere belted coat, herringbones, flat  sequins high neck, gown with a train, 
         short skirt, degital flower printed hilighted with long and short stitches. Flowers are degitally
         printed on a  cotton muslin fabric and patched on a felt overcoat. All the patched prints are highlighted
-         with running stitches in a cotton thread matching to the floral color. Tweed fabrics are hilighted with
-          bugles, flat sequins, swarovski clip stones, etc.
+        with running stitches in a cotton thread matching to the floral color. Tweed fabrics are hilighted with
+        bugles, flat sequins, swarovski clip stones, etc.
     </p>
 </div>
-
-
 
     <div class="project-block">
 
@@ -77,6 +75,7 @@
     </div>
 
     
-    
+     <script src="../js/plugins.js"></script>
+<script src="../js/main.js"></script>
 </body>
 </html>
