--- a/project/spring2020mens.html
+++ b/project/spring2020mens.html
@@ -25,7 +25,7 @@
     <div class="project-block">
 
         <div class="image-block">
-            <img src="../images/Spring 2020 Men_s Wear/_FIO0436.jpg" alt="imge"/>
+            <img src="../images/Spring 2020 Men_s Wear/1.jpg" alt="imge"/>
         </div>
           
     </div>
