--- a/project/spring2020ready.html
+++ b/project/spring2020ready.html
@@ -30,7 +30,7 @@
         </a>
     </header> <!-- end s-header -->
 
-<div style="width: 100%; height: auto; margin:auto; text-align: center;"> 
+<div style="width: 60%; height: auto; margin:auto; text-align: center;"> 
     <h2>Spring 2020 Ready to Wear </h2>
 </div>
 
@@ -55,6 +55,7 @@
     </div>
 
     
-    
+     <script src="../js/plugins.js"></script>
+<script src="../js/main.js"></script>
 </body>
 </html>
