--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/vendor.css">
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/tech.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Roboto:wght@300&display=swap" rel="stylesheet">
   
     <!-- script
@@ -48,6 +49,7 @@
                     <li><a class="smoothscroll" href="#about">About</a></li>
                     <li><a class="smoothscroll" href="#resume">Resume</a></li>
                     <li><a class="smoothscroll" href="#portfolio">Projects</a></li>
+                    <li><a class="smoothscroll" href="#techsheet">My Tech Sheet</a></li>
                     <li><a class="smoothscroll" href="#contact">Say Hello</a></li>
                 </ul>
             </nav>
@@ -107,10 +109,15 @@
             </div>
             <div class="column large-9 tab-12 s-about__content">
                 <h3>About Me</h3>
-                <p>
-                I am a Fashion Enthusiast with an Experience of handling all aspect of design and product 
-                development.
-                I love designing and exploring new ideas in the feilds of fashion.
+                <h5 style="color: aliceblue;">Hi there !</h5>
+                <p style="font-size: 2rem;">
+                 I am Yuryangla Muilung, Fashion Designer based in Mumbai, India. There is so much power in fashion,
+                but there are also a whole bunch of expectations and restrictions societally, especially to women, 
+                that I want to challenge through my work. Having links to nature and seeking innovation from inheritance 
+                and roots in my work does feel important to me. I'd like to utilize my creativity in fashion that 
+                speaks to individuals’ confidence and personal styles one could be proud of! I enjoyed crafting and 
+                creating outfits that I could imagine in every possible way. My work continues to evolve more and more into
+                 something I love! And yes, I will keep evolving myself and my work with time.
                 </p>
                 <hr>
                 <div class="row s-about__content-bottom">
@@ -465,7 +472,7 @@
                 <h1>A Few Of My Creations</h1>
             </div>
         </div>
-
+  
 <!--Testing-->
 <ul class="cards">
   <li>
@@ -539,6 +546,52 @@
   </li>    
 </ul>
 
+  </section>
+
+<section id="techsheet" class="s-portfolio target-section">
+    <div class="row s-portfolio__header">
+        <div class="column large-12">
+            <h2>My Technical Sheets</h2>
+            <br>
+        </div>
+
+
+<div class="tech-card">
+    <a href="techsheet/short.html">
+  <img src="images/tech-short/2.png" alt="Avatar" style="width: 250px; height: auto;"/>
+  <div class="tech-container">
+    <h4><b>Short ( 2 in 1 )</b></h4>
+    <p></p>
+  </div>
+  </a>
+</div>
+
+<div class="tech-card">
+    <a href="techsheet/typo.html">
+  <img src="images/typo/1.png" alt="Avatar" style="width: 250px; height: auto;"/>
+  <div class="tech-container">
+    <h4><b>Typography Shirt</b></h4>
+    <p></p>
+  </div>
+  </a>
+</div>
+
+<div class="tech-card">
+    <a href="techsheet/leggin.html">
+  <img src="images/legg/1.png" alt="Avatar" style="width: 250px; height: auto;"/>
+  <div class="tech-container">
+    <h4><b>Leggin</b></h4>
+    <p></p>
+  </div>
+  </a>
+</div>
+        
+</div>
+
+</section>
+
+
+
 
     <!-- contact
      -->
@@ -609,11 +662,10 @@
         <div class="ss-go-top">
             <a class="smoothscroll" title="Back to Top" href="#top">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M6 4h12v2H6zm5 10v6h2v-6h5l-6-6-6 6z"/></svg>
-               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill:rgba(0, 0, 0, 1);transform:translate(-260.75252 648.08652) rotate(-48.9494);-ms-filter:#3f3d56"><svg d="M18.707 12.707L17.293 11.293 13 15.586 13 6 11 6 11 15.586 6.707 11.293 5.293 12.707 12 19.414z"> </svg>
-             </a>
+              
         </div> <!-- end ss-go-top -->
     </footer>
-
+<div style="margin-bottom: 45px; text-align: center;"> <p style="font-weight: 400px; font-size: 2.0rem;"> copyright&copy; yuryangla </p></div>
     <!-- Java Script
     ================================================== -->
     <script src="js/plugins.js"></script>
