--- a/project/velentino.html
+++ b/project/velentino.html
@@ -31,12 +31,12 @@
 
     </header> <!-- end s-header -->
 <div style="margin-top: 5rem; text-align: center;">
-     <h3>Velentio Project </h3>
+     <h3>Velentino Project </h3>
 </div>
 <ul class="cards">
   <li>
     <a href="../project/fall2020mens.html" class="card">
-      <img src="../images/Fall2020Mens/1.jpg" class="card__image" alt="image" />
+      <img src="../images/Fall2020Mens/4.jpg" class="card__image" alt="image" />
       <div class="card__overlay">
         <div class="card__header">
           <svg class="card__arc" xmlns="http://www.w3.org/2000/svg"><path /></svg>                     
@@ -53,7 +53,7 @@
   
   <li>
     <a href="../project/spring2020mens.html" class="card">
-      <img src="../images/Spring 2020 Men_s Wear/_FIO0436.jpg" class="card__image" alt="" />
+      <img src="../images/Spring 2020 Men_s Wear/1.jpg" class="card__image" alt="" />
       <div class="card__overlay">        
         <div class="card__header">
           <svg class="card__arc" xmlns="http://www.w3.org/2000/svg"><path /></svg>                 
@@ -86,7 +86,7 @@
   </li>
   <li>
     <a href="../project/fall2020r.html" class="card">
-      <img src="../images/Fall2020Mens/_FIO0202.jpg" class="card__image" alt="image" />
+      <img src="../images/Fall2020r/1.jpg" class="card__image" alt="image" />
       <div class="card__overlay">
         <div class="card__header">
           <svg class="card__arc" xmlns="http://www.w3.org/2000/svg"><path /></svg>                 
@@ -98,14 +98,17 @@
 
           </div>          
         </div>
-        <p class="card__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, blanditiis?</p>
+        <p class="card__description"></p>
       </div>
     </a>
   </li>    
 </ul>
 
+<div style="margin-bottom: 45px; text-align: center;"> <p style="font-weight: 400px; font-size: 1.4rem;"> copyright&copy; yuryangla </p></div>
 
 
 
 </body>
+  <script src="../js/plugins.js"></script>
+<script src="../js/main.js"></script>
 </html>
