--- a/index.html
+++ b/index.html
@@ -109,15 +109,9 @@
             </div>
             <div class="column large-9 tab-12 s-about__content">
                 <h3>About Me</h3>
-                <h5 style="color: aliceblue;">Hi there !</h5>
+                <h5 style="color: rgb(197, 213, 226);">Hi there !</h5>
                 <p style="font-size: 2rem;">
-                 I am Yuryangla Muilung, Fashion Designer based in Mumbai, India. There is so much power in fashion,
-                but there are also a whole bunch of expectations and restrictions societally, especially to women, 
-                that I want to challenge through my work. Having links to nature and seeking innovation from inheritance 
-                and roots in my work does feel important to me. I'd like to utilize my creativity in fashion that 
-                speaks to individuals’ confidence and personal styles one could be proud of! I enjoyed crafting and 
-                creating outfits that I could imagine in every possible way. My work continues to evolve more and more into
-                 something I love! And yes, I will keep evolving myself and my work with time.
+                 I am Yuryangla Muilung, Fashion Designer based in Mumbai, India. There is so much power in fashion,but there are also a whole bunch of expectations and restrictions societally, especially to women, that I want to challenge through my work. Having links to nature and seeking innovation from inheritance and roots in my work does feel important to me. I'd like to utilize my creativity in fashion that speaks to individuals’ confidence and personal styles one could be proud of! I enjoyed crafting and creating outfits that I could imagine in every possible way. My work continues to evolve more and more into something I love! And yes, I will keep evolving myself and my work with time.
                 </p>
                 <hr>
                 <div class="row s-about__content-bottom">
@@ -130,7 +124,6 @@
                         <a href="tel:+918689816342">+91 8689816342</a> <br>
                         <a href="mailto:ayangmuilunga@gmail.com">ayangmuilunga@gmail.com</a>
                         </p>
-                        
                     </div>
                     <div class="column w-1000-stack">
                         <a href="https://drive.google.com/file/d/1966Xn7j_uVa3KOlUtoHHsFslAxTwom3X/view?usp=sharing" class="btn btn--download">
@@ -665,7 +658,7 @@
               
         </div> <!-- end ss-go-top -->
     </footer>
-<div style="margin-bottom: 45px; text-align: center;"> <p style="font-weight: 400px; font-size: 2.0rem;"> copyright&copy; yuryangla </p></div>
+<div style="margin-bottom: 45px; text-align: center;"> <p style="font-weight: 400px; font-size: 1.8rem;"> copyright&copy; yuryangla </p></div>
     <!-- Java Script
     ================================================== -->
     <script src="js/plugins.js"></script>
