Correction and Update

--- a/project/velentino.html
+++ b/project/velentino.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Velentino Project</title>
+    <title>Valentino Project</title>
 
 
     <link rel="stylesheet" href="../css/styles.css">
@@ -31,7 +31,7 @@
 
     </header> <!-- end s-header -->
 <div style="margin-top: 5rem; text-align: center;">
-     <h3>Velentino Project </h3>
+     <h3>Valentino Embroidery Project </h3>
 </div>
 <ul class="cards">
   <li>
@@ -42,8 +42,8 @@
           <svg class="card__arc" xmlns="http://www.w3.org/2000/svg"><path /></svg>                     
           <div class="card__header-text">
             <h3 class="card__title">Fall 2020 Mens</h3>   
-            <span class="card__tagline">This is about Mens Wear</span>           
-            <span class="card__status">Personal Project</span>
+            <span class="card__tagline"></span>           
+            <span class="card__status"></span>
           </div>
         </div>
         <p class="card__description"></p>
@@ -60,8 +60,8 @@
          
           <div class="card__header-text">
             <h3 class="card__title">Spring 2020 Mens Wear</h3>
-            <span class="card__tagline">Some of my project on my leisure time</span>  
-            <span class="card__status">Personal Project</span>
+            <span class="card__tagline"></span>  
+            <span class="card__status"></span>
           </div>
         </div>
         <p class="card__description"> </p>
@@ -76,8 +76,8 @@
           <svg class="card__arc" xmlns="http://www.w3.org/2000/svg"><path /></svg>                     
           <div class="card__header-text">
             <h3 class="card__title">Spring 2020 Ready to Wear</h3>
-            <span class="card__tagline">Some of my project on my leisure time</span>            
-            <span class="card__status">Personal Project</span>
+            <span class="card__tagline"></span>            
+            <span class="card__status"></span>
           </div>
         </div>
         <p class="card__description"></p>
@@ -93,8 +93,8 @@
          
           <div class="card__header-text">
             <h3 class="card__title">Fall 2020 Ready to Wear </h3>
-            <span class="card__tagline">Some of my project on my leisure time</span>  
-            <span class="card__status">Personal Project</span>
+            <span class="card__tagline"></span>  
+            <span class="card__status"></span>
 
           </div>          
         </div>
