--- a/project/weddingproject.html
+++ b/project/weddingproject.html
@@ -28,9 +28,13 @@
         </a>
     </header> <!-- end s-header -->
 
-<div style="width: 100%; height: 60px; margin:auto; text-align: center;"> <h2>Bridal Hair Accesory </h2></div>
-
-    
+<div style="width: 40%; height: auto; margin:auto; text-align: center;">
+     <h2>Bridal gown and Dresses </h2>
+     <p>
+          I love sewing and it’s a wonderful feeling to be a part of a beautiful bride walking down the aisle and leaving everyone in awe. I’m always fascinated by freelance in various bridal wear projects. It’s such a joy to blow up all brides dream and take it to the next level. Its super exciting to plan and execute every wedding with the bride assisting them in finalizing their wedding theme, color palette, outfit design, designing wedding invitation cards, wedding decor, etc. And with each and every project I learned something new about both them and myself. This has helped me grow in my career.
+     </p>
+    </div>
+     
     <div class="project-block">
 
         <div class="image-block">
