--- a/project/velentino.html
+++ b/project/velentino.html
@@ -102,7 +102,26 @@
       </div>
     </a>
   </li>    
+<li>
+    <a href="../project/prefall2020.html" class="card">
+      <img src="../images/prefall/1.jpg" class="card__image" alt="image" />
+      <div class="card__overlay">
+        <div class="card__header">
+          <svg class="card__arc" xmlns="http://www.w3.org/2000/svg"><path /></svg>                 
+         
+          <div class="card__header-text">
+            <h3 class="card__title">Pre-Fall 2020 </h3>
+            <span class="card__tagline"></span>  
+            <span class="card__status"></span>
+
+          </div>          
+        </div>
+        <p class="card__description"></p>
+      </div>
+    </a>
+  </li> 
 </ul>
+
 
 <div style="margin-bottom: 45px; text-align: center;"> <p style="font-weight: 400px; font-size: 1.4rem;"> copyright&copy; yuryangla </p></div>
 
