update profile and add some kids pics

--- a/index.html
+++ b/index.html
@@ -105,13 +105,15 @@
 
         <div class="row">
             <div class="column large-3 tab-12">
-                <img class="s-about__pic" src="images/avatars/dp.png" alt="">
+                <img class="s-about__pic" src="images/avatars/dp.png" alt="profile-image">
             </div>
             <div class="column large-9 tab-12 s-about__content">
                 <h3>About Me</h3>
                 <h5 style="color: rgb(197, 213, 226);">Hi there !</h5>
-                <p style="font-size: 2rem;">
-                 I am Yuryangla Muilung, Fashion Designer based in Mumbai, India. There is so much power in fashion,but there are also a whole bunch of expectations and restrictions societally, especially to women, that I want to challenge through my work. Having links to nature and seeking innovation from inheritance and roots in my work does feel important to me. I'd like to utilize my creativity in fashion that speaks to individuals’ confidence and personal styles one could be proud of! I enjoyed crafting and creating outfits that I could imagine in every possible way. My work continues to evolve more and more into something I love! And yes, I will keep evolving myself and my work with time.
+                <p style="font-size: 2rem; text-align: justify;">
+                I am Yuryangla Muilung, Fashion Designer based in Mumbai, India. There is so much power in fashion, but there are also a whole bunch of expectations and restrictions societally, especially on women, that I want to challenge through my work. I draw inspiration from nature and recreate designs that have elements linked to my roots and inheritance. 
+I'd like to utilize my creativity in fashion that speaks to individuals’ confidence and personal styles that represents who they are! I enjoy crafting and creating outfits that I could imagine in every possible way and push my limits. 
+I do believe that I will keep evolving myself and my work with time.
                 </p>
                 <hr>
                 <div class="row s-about__content-bottom">
@@ -559,7 +561,6 @@
       </div>
     </a>
   </li>   
-
    <li>
     <a href="project/typongraphic.html" class="card">
       <img src="images/graphic/1.jpg" class="card__image" alt="image" />
@@ -577,15 +578,8 @@
       </div>
     </a>
   </li> 
-
-
-
-
 </ul>
-
-
-
-  </section>
+</section>
 
 <section id="techsheet" class="s-portfolio target-section">
     <div class="row s-portfolio__header">
@@ -593,8 +587,6 @@
             <h2>My Technical Sheets</h2>
             <br>
         </div>
-
-
 <div class="tech-card">
     <a href="techsheet/short.html">
   <img src="images/tech-short/2.png" alt="Avatar" style="width: 250px; height: auto;"/>
@@ -628,8 +620,6 @@
 </div>
 
 </section>
-
-
 
 
     <!-- contact
