--- a/project/girlswear.html
+++ b/project/girlswear.html
@@ -26,11 +26,10 @@
         </a>
     </header> <!-- end s-header -->
 
-<div style="width: 100%; height: auto; margin:auto; text-align: center;"> 
+<div style="width: 50%; height: auto; margin:auto; text-align: center;"> 
     <h2>Girls Party wear (Kids) </h2>
-</div>
+</div class="img-container">
      <div class="project-block">
-
         <div class="image-block">
            <img src="../images/Girls/2.jpg" alt="image">
             <img src="../images/Girls/3.jpg" alt="image">
@@ -55,7 +54,7 @@
         <div class="image-block">
             <img src="../images/Girls/216.png" alt="image">
              <img src="../images/Girls/chuilan bday.jpg" alt="image">
-            <img src="../images/Girls/212.jpg" alt="image">
+            <img src="../images/Girls/2122.png" alt="image">
         </div>
 
         <div class="image-block">
