--- a/project/weddingproject.html
+++ b/project/weddingproject.html
@@ -31,16 +31,14 @@
 <div style="width: 50%; height: auto; margin:auto; text-align: center;">
      <h2>Bridal gown and Dresses </h2>
      <p style="text-align: justify;">
-          I love sewing and it’s a wonderful feeling to be a part of a beautiful bride walking down the aisle and leaving everyone in awe. I’m always fascinated by freelance in various bridal wear projects. It’s such a joy to blow up all brides dream and take it to the next level. Its super exciting to plan and execute every wedding with the bride assisting them in finalizing their wedding theme, color palette, outfit design, designing wedding invitation cards, wedding decor, etc. And with each and every project I learned something new about both them and myself. This has helped me grow in my career.
-     </p>
+          I love sewing and it’s a wonderful feeling to be a part of a beautiful bride walking down the aisle and leaving everyone in awe. I’m always fascinated to take up various bridal wear projects for which I do freelancing. It’s such a joy to help reimagine a bride’s dream wedding dress and take it to the next level. I ensure that for every wedding dress, the brides themselves are involved in finalizing their wedding theme, color palette, outfit design, designing wedding invitation cards, wedding decor, etc. And with each and every project, I learn something new about both them and myself. This journey has helped me grow in my career as well.
     </div>
 
     <div class="project-block">
         <div class="image-block">
             <img src="../images/BridesWhitegown/IMG_6083.JPG" alt="imge"/>
-               
-                     <img src="../images/BridesWhitegown/IMG_6083.JPG" alt="image"> 
-                <img src="../images/BridesWhitegown/wedding 20th DEC (692 of 212).jpg"alt="Image/"">
+            <img src="../images/BridesWhitegown/weddinggown3.jpg" alt="image"> 
+            <img src="../images/BridesWhitegown/wedding 20th DEC (692 of 212).jpg"alt="Image/"">
         </div>
         
         <div class="image-block">
@@ -71,7 +69,6 @@
         </div>
          <div class="image-block">
              <img src="../images/BridesWhitegown/BOUNTY.jpg" alt="image">
-             <img src="../images/BridesWhitegown/weddinggown3.jpg" alt="image">
             <img src="../images/BridesWhitegown/personal.JPG" alt="image">
         </div>
 
