update spelling and minor changes

--- a/project/girlswear.html
+++ b/project/girlswear.html
@@ -26,8 +26,10 @@
         </a>
     </header> <!-- end s-header -->
 
-<div style="width: 50%; height: auto; margin:auto; text-align: center;"> 
+<div class="head-title"> 
     <h2>Girls Party wear (Kids) </h2>
+    <hr>
+</div>
 </div class="img-container">
      <div class="project-block">
         <div class="image-block">
