--- a/project/spring2020ready.html
+++ b/project/spring2020ready.html
@@ -28,8 +28,15 @@
         </a>
     </header> <!-- end s-header -->
 
-<div style="width: 60%; height: auto; margin:auto; text-align: center;"> 
+<div class="head-title"> 
     <h2>Spring 2020 Ready to Wear </h2>
+
+    <h5>Description</h5>
+
+    <p>
+        Ready to WEAR 2020 Applique PROCESS: oganza fabric and dori/chord for the outline were dyed in fluorescent color. Place the artwork in a double layered fabric and madkan (lock the outlines) to avoid fraying of fabric. All the madkan areas are highlighted with a dori outlines. For 3D petals, gums were applied to sturdy 3D effects. And Floral machine embroidered laces were stitched and highlighted with faceted beads (football beads). Feathers were stitched along with the faceted beads at the sleeves border.
+
+    </p>
 </div>
     <div class="project-block">
 
