--- a/project/weddingproject.html
+++ b/project/weddingproject.html
@@ -28,7 +28,7 @@
     </header> <!-- end s-header -->
 
 
-<div style="width: 50%; height: auto; margin:auto; text-align: center;">
+<div class="head-title">
      <h2>Bridal gown and Dresses </h2>
      <p style="text-align: justify;">
           I love sewing and it’s a wonderful feeling to be a part of a beautiful bride walking down the aisle and leaving everyone in awe. I’m always fascinated to take up various bridal wear projects for which I do freelancing. It’s such a joy to help reimagine a bride’s dream wedding dress and take it to the next level. I ensure that for every wedding dress, the brides themselves are involved in finalizing their wedding theme, color palette, outfit design, designing wedding invitation cards, wedding decor, etc. And with each and every project, I learn something new about both them and myself. This journey has helped me grow in my career as well.
