--- a/project/illustration.html
+++ b/project/illustration.html
@@ -26,7 +26,7 @@
         </a>
     </header> <!-- end s-header -->
 
-<div style="width: 100%; height: auto; margin:auto; text-align: center;"> 
+<div class="head-title"> 
     <h2>Illustration </h2>
 </div>
      <div class="project-block">
