udpated spelling mistake and Minor changes

--- a/project/girlswear.html
+++ b/project/girlswear.html
@@ -28,6 +28,9 @@
 
 <div class="head-title"> 
     <h2>Girls Party wear (Kids) </h2>
+
+    <h3>Description</h3>
+    <p>It would be wrong to think that style and fashion restricts only with the adults. It surely encompasses the little ones too! However, a lot more goes into designing one of these pretty dresses than how it simply appears. Comfort and funtionality are the number one criteria when designing anything for kids wear. It includes selection of fabric and materials that will allow kids to move freely all day long.</p>
     <hr>
 </div>
 </div class="img-container">
