--- a/project/fall2020r.html
+++ b/project/fall2020r.html
@@ -29,7 +29,7 @@
         </a>
     </header> <!-- end s-header -->
 
-<div class="head-title" style="height: auto; margin:auto; text-align: justify;"> 
+<div class="head-title"> 
     <h2>Fall 2020 Ready to Wear </h2>
     
     <h4>Description</h4>
