Added photo to fall 2020 ready

--- a/project/fall2020r.html
+++ b/project/fall2020r.html
@@ -60,7 +60,12 @@
             <img src="../images/Fall2020r/10.jpg" alt="image">  
             <img src="../images/Fall2020r/11.jpg" alt="image">  
             <img src="../images/Fall2020r/12.jpg" alt="image">  
-            <img src="../images/Fall2020r/13.jpg" alt="image">  
+            
+        </div>
+        <div class="image-block">
+            <img src="../images/Fall2020r/13.jpg" alt="image">
+            <img src="../images/Fall2020r/14.jpg" alt="image">
+            <img src="../images/Fall2020r/15.jpg" alt="image">
         </div>
 
           
