--- a/project/fall2020r.html
+++ b/project/fall2020r.html
@@ -34,7 +34,7 @@
     
     <h4>Description</h4>
     <p>
-        Fall 2020 Ready to wear collection was inspired by season's neo-minimalist look.The wcollection is abouty stripping colors away and quite a bit of embelishment that havebecome accustomed to Valentino. Its anout embracing the big changes in the world of encouraging  tolerance and equility. The whole depict individaulity, inclusivity,etc. which include brass button peacoat, mid length cashmere belted coat, herringbones, flat  sequins high neck, gown with a train,  short skirt, degital flower printed hilighted with long and short stitches. Flowers are degitally printed on a  cotton muslin fabric and patched on a felt overcoat. All the patched prints are highlighted with running stitches in a cotton thread matching to the floral color. Tweed fabrics are hilighted withbugles, flat sequins, swarovski clip stones, etc.
+        Fall 2020 Ready to wear collection was inspired by season's neo-minimalist look.The collection is about stripping colors away and quite a bit of embelishment that have become accustomed to Valentino. It is about embracing the big changes in the world of encouraging  tolerance and equality. The whole depict individaulity, inclusivity,etc. which include brass button peacoat, mid length cashmere belted coat, herringbones, flat sequins high neck, gown with a train, short skirt, degital flower printed hilighted with long and short stitches. Flowers are degitally printed on a cotton muslin fabric and patched on a felt overcoat. All the patched prints are highlighted with running stitches in a cotton thread matching to the floral color. Tweed fabrics are hilighted withbugles, flat sequins, swarovski clip stones, etc.
     </p>
 </div>
 
